--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <aside class="col-lg-3 bg-light">
             <h5 class="mt-1">Search the City weather:</h5>
             <div class="form-inline form-group">
-              <input class="form-control" type="text" id="searchQueery" />
+              <input class="form-control" type="text" id="searchQuery" />
               <button class="btn btn-primary" id="searchBtn"> <i class="fa fa-search"></i> </button>
             </div>
     
@@ -31,6 +31,11 @@
     
           <div class="col-lg-9">
             <div id="oneDay" class="mt-3">
+              <h1 class='cityName'></h1>
+              <p class="temp">Temperature</p>
+              <p class='humidity'>Humidity</p>
+              <p class='wind-speed'>Wind Speed</p>
+              <p class="uv-index">UV Index</p>
                 <!-- render one day forecast to this div-->
             </div>
             <div id="fiveDay" class="mt-3">
