adding color to UV Index

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <p class="temp">Temperature</p>
               <p class='humidity'>Humidity</p>
               <p class='wind-speed'>Wind Speed</p>
-              <p class="uv-index">UV Index</p>
+              <p class="uv-index"><span class='bg-light'>UV Index</span></p>
                 <!-- render one day forecast to this div-->
             </div>
             <div id="fiveDay" class="mt-3">
