began to add 7 day forecast, began changing quotations back to double instead of single

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
 
     <title>Weather Dashboard</title>
 
@@ -35,7 +36,7 @@
               <p class="temp">Temperature</p>
               <p class='humidity'>Humidity</p>
               <p class='wind-speed'>Wind Speed</p>
-              <p class="uv-index"><span class='bg-light'>UV Index</span></p>
+              <p class="uv-index">UV Index<span id="uv-index"></span></p>
                 <!-- render one day forecast to this div-->
             </div>
             <div id="fiveDay" class="mt-3">
