--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
           <div class="col-lg-9">
             <div id="oneDay" class="mt-3">
               <h1 class='cityName'></h1>
-              <p class="temp">Temperature</p>
-              <p class='humidity'>Humidity</p>
-              <p class='wind-speed'>Wind Speed</p>
-              <p class="uv-index">UV Index<span id="uv-index"></span></p>
+              <p class="temp">Temperature </p>
+              <p class='humidity'>Humidity </p>
+              <p class='wind-speed'>Wind Speed </p>
+              <p class="uv-index">UV Index <span id="uv-index"></span></p>
                 <!-- render one day forecast to this div-->
             </div>
-            <div id="fiveDay" class="mt-3">
+            <div id="fiveDay" class="row mt-2">
                 <!-- render five day forecast to this div-->
             </div>
           </div>
         </div>
       </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="script.js"></script>
   </body>
