added 5 day forecast header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;500;700&family=Staatliches&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
     <title>Weather Dashboard</title>
@@ -40,8 +43,10 @@
               <p class="uv-index">UV Index <span id="uv-index"></span></p>
                 <!-- render one day forecast to this div-->
             </div>
-            <div id="fiveDay" class="row mt-2">
-
+            <div class="row mt-2 justify-content-center">
+              <h3 class="forecast-header">5-Day Forecast</h3>
+            </div>
+            <div id="fiveDay" class="row mt-2 justify-content-center">
                 <!-- render five day forecast to this div-->
             </div>
           </div>
