figured how to append five day forecast correctly

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </ul>
           </aside>
     
-          <div class="col-lg-9">
+          <div class="col-lg-9 justify-content-center">
             <div id="oneDay" class="mt-3">
               <h1 class='cityName'></h1>
               <p class="temp">Temperature </p>
